<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/trans_40px"
    android:layout_marginRight="@dimen/trans_40px"
    android:background="@drawable/shape_white_radiu_t5"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/trans_20px"
        android:paddingLeft="@dimen/trans_40px"
        android:paddingTop="@dimen/trans_40px"
        android:text="V2.1.0版本更新"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_trans_32px"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/trans_499px"
        >

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/trans_40px"
            android:paddingRight="@dimen/trans_40px"
            android:text="1.新增在线客服，随时为您服务;\n
 2.交易全新升级，新增BCH场外交易。"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_trans_28px"/>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/trans_20px"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/trans_20px"
        android:paddingRight="@dimen/trans_30px">


        <TextView
            android:id="@+id/tv_http"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/str_updata_official_website"
            android:padding="@dimen/trans_30px"
            android:textColor="@color/mark_color"
            android:textSize="@dimen/text_trans_24px"/>


        <TextView
            android:id="@+id/tv_cannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_write_gray_radiu5"
            android:gravity="center"
            android:padding="@dimen/trans_30px"
            android:text="@string/str_cancel"
            android:textColor="@color/mark_color"
            android:textSize="@dimen/text_trans_24px"/>


        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/trans_30px"
            android:background="@drawable/select_write_gray_radiu5"
            android:gravity="center"
            android:padding="@dimen/trans_30px"
            android:text="@string/str_determine"
            android:textColor="@color/mark_color"
            android:textSize="@dimen/text_trans_24px"/>

    </LinearLayout>

</LinearLayout>